welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:15: error: expected class or object definition
def irem(a:Int):Int = {
^maxMod5:20: error: expected class or object definition
def min (a:Int , b:Int): Int = {
^maxMod5:25: error: expected class or object definition
def max (a:Int , b:Int): Int = {
^maxMod5:29: error: Unmatched closing brace '}' ignored here
 }
 ^